Refatoração problema com buckets